kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-bugging-deployment
  labels:
    app: k8s-bugging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-bugging
  template:
    metadata:
      labels:
        name: k8s-bugging
        app: k8s-bugging
    spec:  
      containers:
        - name: k8s-bugging-pod
          image: twelcon/random:10
          ports:
            - containerPort: 8131

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-bugging-service
  labels:
    app: k8s-bugging
spec:
  ports:
    - port: 80
      targetPort: 8131
  selector:
    app: k8s-bugging
